Development Portal (2018-03-15 shi)
==============================
Fixed result period dates to display even when there is no data


Development Portal (2018-03-14 shi)
==============================
Fixed word-break for datasets in Dash
Fixed word-break for countries table in Dash


Development Portal (2018-03-12 shi)
==============================
Added result_vocab codelist
Fixed result reference outside indicator


Development Portal (2018-03-06 shi)
==============================
Update result attr values layout
Update support for multiple references in result element
Add document-links in result element for 2.03
Minor css fixes to accomodate savi changes
Update Print-friendly css
Update link support for result reference vocab
Translate vocab numbers to standard descriptions from Registry
Update related-activity terms
Added more info for CSV download on map views
Added additional notes to map view footer


Development Portal (2018-02-27 shi)
==============================
Fixed activity list with long numbers


Development Portal (2018-02-10 shi)
==============================
Update related-activity codelist to 202
Change background-color of ended result
Update result date, span-narrative and indicator value font size
Update search group and category icons in search dropdown


Development Portal (2017-12-25 shi)
==============================
Update DASH css
Update dash_quality css


Development Portal (2017-12-19 shi)
==============================
Minor css fixes
Added refine search button
Updated translations
Updated themes


Development Portal (2017-12-15 shi)
==============================
Updated currency span to one line


Development Portal (2017-12-06 shi)
==============================
Fix sector/country counts when there are more activities on a SAVi page


Development Portal (2017-11-28 shi)
==============================
Update font alignment for titles in table


Development Portal (2017-11-21 shi)
==============================