@@ -200,7 +200,9 @@ result indicator:before		{counter-increment:subsection; content:counter(section)
 result indicator[measure="1"]:before,
 result indicator[measure="2"]:before	{content:counter(section) "." counter(subsection) " INDICATOR";}
 
-result indicator[measure="2"] period baseline span-narrative:after, result indicator[measure="2"] period target span-narrative:after, result indicator[measure="2"] period actual span-narrative:after	{content:" %";}
+result indicator[measure="2"] period baseline span-narrative:after,
+result indicator[measure="2"] period target span-narrative:after,
+result indicator[measure="2"] period actual span-narrative:after	{content:" %";}
 
 result indicator span-title	{display:inline-block; width:100%; vertical-align:top; font-size:16px; line-height:22px; padding:0 30px 0 0; box-sizing:border-box;}
 result indicator span-title:before {content:" "; margin:0; border:0;}
