@@ -1,6 +1,7 @@
 Development Portal (2018-03-15 shi)
 ==============================
 Fixed result period dates to display even when there is no data
+Added % to baseline in original theme
 
 
 Development Portal (2018-03-14 shi)
